# lawbor

./: .env.example  README.md  index.html  package-lock.json  package.json  push.sh  server.ts  supabase-schema.sql  vercel-log  vercel.json  vite.config.ts
.claude/: settings.local.json
.workbuddy/: expert-history.json
.workbuddy/memory/: 2026-04-09.md  2026-04-10.md  2026-04-12.md  2026-04-13.md  2026-04-14.md  MEMORY.md
.workbuddy/plans/: 修复信用代码显示不全问题_da4d679f.md  税务计算器补充省份列表_a55e20d3.md  补充税务计算器城市列表_d439630b(未完成).md  补充税务计算器省份列表_3ee2d2a2(未完成).md
api/: tts.ts
api/download/: [key].js
api/qcc/: company-risk.mjs  tools.js
docs/: AUTH_IMPLEMENTATION_SUMMARY.md  Implementation-Summary.md  Lawbor-Product-Demo-Script.md  Lawbor-Project-Presentation.cjs  Lawbor-Project-Presentation.pptx  Lawbor-Technical-Document.cjs  Lawbor-Technical-Document.docx  Project-Workflow-Analysis.md  index.html  文件上传功能检查报告.md  省市选择器更新说明.md  税务计算公式检查报告.md  税务计算验证报告.md
lawbor-main/: loadEnv.ts  package-lock.json  package.json  server.ts  vite.config.ts  模拟面试代码文件清单.md
lawbor-main (2)/: package.json
lawbor-main (2)/lawbor-main/: README.md  VERCEL_API_FIX.md  metadata.json  package-lock.json  package.json  server.ts  supabase-schema.sql  vercel.json
lawbor-main/.workbuddy/: expert-history.json
lawbor-main/lumos-main/: .gitignore  CHANGELOG.md  README.md  (+2 more)
lawbor-main/lumos-main/backend/: README.md  pyproject.toml
lawbor-main/lumos-main/backend/app/: __init__.py
lawbor-main/lumos-main/backend/app/agent/: __init__.py  graph.py  state.py
lawbor-main/lumos-main/backend/app/agent/nodes/: __init__.py  retriever.py
lawbor-main/lumos-main/backend/app/agent/tools/: law_search.py
lawbor-main/lumos-main/backend/app/core/: config.py
lawbor-main/lumos-main/backend/app/models/: __init__.py  analysis.py  contract.py
lawbor-main/lumos-main/backend/app/rag/: law_corpus.py  vector_store.py
lawbor-main/lumos-main/backend/app/schemas/: __init__.py  analysis.py  contract.py
lawbor-main/lumos-main/backend/app/web/: routes.py
lawbor-main/lumos-main/backend/tests/: test_api.py
lumos-main/: CODE_OF_CONDUCT.md  LICENSE  SECURITY.md
src/: App.tsx
就业扶持政策/: Beijing Employment Support Policies（Chi）.md  Chongqing Employment Support Policies（Eng）.md
(+175 files in other folders)
